--- a/cart-order-complete.html
+++ b/cart-order-complete.html
@@ -45,10 +45,10 @@
                 </div>
                 <div class="offcanvas-body d-flex flex-column justify-content-between align-items-start">
                     <div class="top-content-offcanves w-100">
-                        <div class="search-side-bar w-100 position-relative d-flex justify-content-start align-items-center gap-5">
+                        <!-- <div class="search-side-bar w-100 position-relative d-flex justify-content-start align-items-center gap-5">
                             <input type="text" placeholder="Search" class="w-100">
                             <i class="fa-solid fa-magnifying-glass position-absolute"></i>
-                        </div>
+                        </div> -->
                         <div class="mt-3 w-100 d-flex flex-column justify-content-between align-items-start" id="navbarNav">
                             <a href="index.html" class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Home</a>
                             <a href="shop.html" class="btn homt-side-btn d-flex justify-content-start ps-3 w-100">Shop</a>
@@ -58,13 +58,13 @@
                     </div>
                     <div class="bottm-content w-100">
                         <div class="btns d-flex flex-column justify-content-center align-items-start w-100">
-                            <a href="cart-shipping.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
+                            <!-- <a href="cart-shipping.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
                                 <span>Cart</span>
                                 <div class="count-of-products-in-cart right-cart d-flex justify-content-center align-items-center gap-2">
                                     <i class="fa-solid fa-cart-shopping"></i>
                                     <div class="count-of-shopping-items">0</div>
                                 </div>
-                            </a>
+                            </a> -->
                             <a href="wishlist.html" class="cart-btn-offcanves btn w-100 d-flex justify-content-between align-items-center">
                                 <span>Wishlist</span>
                                 <div class="right-cart d-flex justify-content-center align-items-center gap-2">
@@ -106,29 +106,29 @@
                         </li>
                     </ul>
                     <div class="btns d-flex justify-content-lg-between justify-content-start align-items-center gap-lg-0 gap-3">
-                        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTopThird" aria-controls="offcanvasTopThird">
+                        <!-- <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTopThird" aria-controls="offcanvasTopThird">
                             <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
+                        </button> -->
                         <a href="account.html" class="btn"><i class="fa-regular fa-user"></i></a>
-                        <button id="open-cart" class="btn d-flex justify-content-center align-items-center gap-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSecond">
+                        <!-- <button id="open-cart" class="btn d-flex justify-content-center align-items-center gap-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSecond">
                             <i class="fa-solid fa-cart-shopping"></i>
                             <div class="count-of-products-in-cart count-of-shopping-items">
                                 0
                             </div>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <div class="show-on-small flex-grow-1 d-lg-none d-flex justify-content-end align-items-center gap-4">
-                    <button id class="btn d-flex justify-content-center align-items-center gap-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSecond">
+                    <!-- <button id class="btn d-flex justify-content-center align-items-center gap-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSecond">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <div class="count-of-products-in-cart count-of-shopping-items">
                             0
                         </div>
-                    </button>
+                    </button> -->
                 </div>
             </div>
         </nav>
-        
+<!--         
         <div class="cart-canves">
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasSecond">
             <div class="offcanvas-header">
@@ -154,7 +154,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="offcanvas offcanvas-top" tabindex="-1" 
             id="offcanvasTopThird" 
@@ -218,23 +218,41 @@
                         <div class="congratulation w-100 p-lg-5">
                             <h3 class="d-flex justify-content-center align-items-center w-100">Thank you! 🎉</h3>
                             <h2 class="d-flex justify-content-center align-items-center w-100 text-center">Your order has been <br> received</h2>
-                            <div class="prd-imgs d-flex gap-3 justify-content-center align-items-center mt-5 mb-5">
-                                <div class="img position-relative">
-                                    <img src="assets/imgs/Black-Tray-table.jpg" alt="product">
-                                    <div class="d-flex justify-content-center align-items-center position-absolute">
-                                        1
-                                    </div>
-                                </div>
-                                <div class="img position-relative">
-                                    <img src="assets/imgs/Red-Tray-table.jpg" alt="product">
-                                    <div class="d-flex justify-content-center align-items-center position-absolute">
-                                        2
-                                    </div>
-                                </div>
-                                <div class="img position-relative">
-                                    <img src="assets/imgs/Table-Lamp-2.jpg" alt="product">
-                                    <div class="d-flex justify-content-center align-items-center position-absolute">
-                                        2
+                            <div class="prd-imgs-container">
+                                <div class="row">
+                                    <div class="col-lg-6 offset-lg-3 ">
+                                        <div id="prd-imgs" class="prd-imgs d-flex flex-wrap gap-3 justify-content-center align-items-center mt-5 mb-5">
+                                            <div class="img position-relative">
+                                                <img src="assets/imgs/Black-Tray-table.jpg" alt="product">
+                                                <div class="d-flex justify-content-center align-items-center position-absolute">
+                                                    1
+                                                </div>
+                                            </div>
+                                            <div class="img position-relative">
+                                                <img src="assets/imgs/Red-Tray-table.jpg" alt="product">
+                                                <div class="d-flex justify-content-center align-items-center position-absolute">
+                                                    2
+                                                </div>
+                                            </div>
+                                            <div class="img position-relative">
+                                                <img src="assets/imgs/Table-Lamp-2.jpg" alt="product">
+                                                <div class="d-flex justify-content-center align-items-center position-absolute">
+                                                    2
+                                                </div>
+                                            </div>
+                                            <div class="img position-relative">
+                                                <img src="assets/imgs/Black-Tray-table.jpg" alt="product">
+                                                <div class="d-flex justify-content-center align-items-center position-absolute">
+                                                    1
+                                                </div>
+                                            </div>
+                                            <div class="img position-relative">
+                                                <img src="assets/imgs/Red-Tray-table.jpg" alt="product">
+                                                <div class="d-flex justify-content-center align-items-center position-absolute">
+                                                    2
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -245,15 +263,15 @@
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center w-50 ps-5 pe-5">
                                     <span>Date:</span>
-                                    <span>October 19, 2023</span>
+                                    <span class="date-of-order">October 19, 2023</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center w-50 ps-5 pe-5">
                                     <span>Total</span>
-                                    <span>$1,345.00</span>
+                                    <span class="paid-total">$1,345.00</span>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center w-50 ps-5 pe-5">
                                     <span>Payment method:</span>
-                                    <span>Credit Card</span>
+                                    <span class="pay-method">Credit Card</span>
                                 </div>
                             </div>
                             <div class="details mb-5 d-lg-none d-flex flex-column justify-content-center align-items-start gap-3 ps-3 pe-3">
@@ -264,24 +282,23 @@
                                 </div>
                                 <div class="d-flex flex-column justify-content-center align-items-start gap-3 w-100">
                                     <span>Date:</span>
-                                    <span>October 19, 2023</span>
+                                    <span class="date-of-order">October 19, 2023</span>
                                     <hr class="w-100">
                                 </div>
                                 <div class="d-flex flex-column justify-content-center align-items-start gap-3 w-100">
                                     <span>Total</span>
-                                    <span>$1,345.00</span>
+                                    <span class="paid-total">$1,345.00</span>
                                     <hr class="w-100">
                                 </div>
                                 <div class="d-flex flex-column justify-content-center align-items-start gap-3 w-100">
                                     <span>Payment method:</span>
-                                    <span>Credit Card</span>
+                                    <span class="pay-method">Credit Card</span>
                                     <hr class="w-100">
                                 </div>
                             </div>
                             <div class="w-100 d-flex justify-content-center mb-3 align-items-center">
-                                <button class="btn purchase">Purchase history</button>
+                                <a href="orders.html" class="btn purchase">Purchase history</a>
                             </div>
-                            <!-- <button class="btn purchase">Purchase history</button> -->
                         </div>
                     </div>
                 </div>
