--- a/cart-shipping.html
+++ b/cart-shipping.html
@@ -247,22 +247,22 @@
                                 <h2>Cart Summary</h2>
                                 <div class="shipping-way active mt-3 p-3 d-flex justify-content-between align-items-center">
                                     <div class="inp d-flex justify-content-start align-items-center gap-2">
-                                        <input type="radio" class="ship-way" name="shp-way" id="free-shipping" checked="checked" value="0.00">
-                                        <label for="free-shipping">Free Shipping</label>
+                                        <input type="radio" class="ship-way" name="shp-way" id="free" checked="checked" value="0.00">
+                                        <label for="free">Free Shipping</label>
                                     </div>
                                     <span>$0.00</span>
                                 </div>
                                 <div class="shipping-way mt-3 p-3 d-flex justify-content-between align-items-center">
                                     <div class="inp d-flex justify-content-start align-items-center gap-2">
-                                        <input type="radio" class="ship-way" name="shp-way" id="express-shipping" value="15.00">
-                                        <label for="express-shipping">Express shipping</label>
+                                        <input type="radio" class="ship-way" name="shp-way" id="express" value="15.00">
+                                        <label for="express">Express shipping</label>
                                     </div>
                                     <span>+$15.00</span>
                                 </div>
                                 <div class="shipping-way mt-3 p-3 d-flex justify-content-between align-items-center">
                                     <div class="inp d-flex justify-content-start align-items-center gap-2">
-                                        <input type="radio" class="ship-way" name="shp-way" id="pick-up-shipping" value="21.00">
-                                        <label for="pick-up-shipping">Pick Up</label>
+                                        <input type="radio" class="ship-way" name="shp-way" id="pick-up" value="21.00">
+                                        <label for="pick-up">Pick Up</label>
                                     </div>
                                     <span>$21.00</span>
                                 </div>
